@@ -1,3 +1,7 @@
+2005-05-14  Bruno Haible  <bruno@clisp.org>
+
+	* makemake.in (ansi-tests): Undo 2005-05-05 patch.
+
 2005-05-28  Bruno Haible  <bruno@clisp.org>
 
 	Fix unmaintainable hack introduced on 2005-05-16.
